--- a/main.ipynb
+++ b/main.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from math import sqrt, floor"
+    "from math import sqrt, floor\n",
+    "from numba import jit"
    ]
   },
   {
@@ -20,10 +21,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
+    "@jit(nopython=True, parallel=True)\n",
     "def bubble_sort(V):\n",
     "    # Já que vamos comparar v[i] com v[i+1], no pior caso,\n",
     "    for iteração in range(len(V) - 1):\n",
@@ -49,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,12 +140,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "def particionar_array(V):\n",
     "    n = len(V)\n",
     "    len_parte = floor(sqrt(n))\n",
@@ -169,20 +169,23 @@
     "\n",
     "    return partes[max_index_parte].pop()\n",
     "\n",
-    "\n",
+    "# max_index, max_value = max(\n",
+    "#             enumerate(aux_maiores), key=lambda x: x[1] if x[1] != None else -np.inf\n",
+    "#         )\n",
     "def sqrt_sort(V, funcao_de_ordenacao) -> list:\n",
     "    partes = particionar_array(V)\n",
     "    solucao = []\n",
     "\n",
     "    # ordena cada parte\n",
     "    for i in range(len(partes)):\n",
-    "        partes[i] = funcao_de_ordenacao(partes[i])\n",
+    "        # partes[i] = funcao_de_ordenacao(partes[i])\n",
+    "        partes[i] = funcao_de_ordenacao(np.array(partes[i])).tolist()\n",
     "\n",
     "    for _ in range(len(V)):\n",
     "        maior_valor_das_partes = max_partes(partes)\n",
     "        solucao.append(maior_valor_das_partes)\n",
     "\n",
-    "    return solucao[::-1]"
+    "    return solucao[::-1]\n"
    ]
   },
   {
@@ -194,19 +197,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/matheus/Documents/Faculdade/analise-de-algoritmos/.venv/lib/python3.10/site-packages/numba/core/typed_passes.py:329: NumbaPerformanceWarning: \n",
+      "The keyword argument 'parallel=True' was specified but no transformation for parallel execution was possible.\n",
+      "\n",
+      "To find out why, try turning on parallel diagnostics, see https://numba.readthedocs.io/en/stable/user/parallel.html#diagnostics for help.\n",
+      "\n",
+      "File \"../../../../../tmp/ipykernel_25566/2551992220.py\", line 1:\n",
+      "<source missing, REPL/exec in use?>\n",
+      "\n",
+      "  warnings.warn(errors.NumbaPerformanceWarning(msg,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.13592352867126464\n"
+     ]
+    }
+   ],
    "source": [
     "from time import time\n",
     "\n",
     "np.random.seed(123)\n",
-    "V = np.random.randint(1000, size=10 ** 7)\n",
+    "V = np.random.randint(1000, size=10 ** 4)\n",
     "\n",
     "\n",
     "times = []\n",
     "\n",
-    "for _ in range(5):\n",
+    "for _ in range(20):\n",
     "    start = time()\n",
     "    sqrt_sort(V, bubble_sort)\n",
     "    # sqrt_sort(V, heap_sort)\n",
@@ -215,7 +241,6 @@
     "\n",
     "    times.append(total_time)\n",
     "\n",
-    "print(times)\n",
     "print(sum(times)/len(times))\n",
     "\n",
     "\n",
