--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,15 +51,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_max_heap(V):\n",
     "    \"\"\"Transforma o array em um max-heap\"\"\"\n",
-    "\n",
-    "    ultimo_index_que_nao_é_folha = (len(V) // 2) - 1  # pq as folhas já são heaps\n",
-    "    for i in reversed(range(ultimo_index_que_nao_é_folha)):\n",
+    "    for i in reversed(range(len(V)//2)):\n",
     "        heapify_down(V, i)\n",
     "\n",
     "\n",
@@ -79,43 +77,13 @@
     "        V[i], V[maior] = V[maior], V[i]  # troca\n",
     "        heapify_down(V, maior)\n",
     "\n",
+    "def heap_pop(heap):\n",
+    "    maior = heap[0]\n",
+    "    ultimo = heap.pop() \n",
     "\n",
-    "def heapify_up(V, i):\n",
-    "    pai = (i - 1) // 2\n",
-    "\n",
-    "    if (pai >= 0) and (V[i] > V[pai]):\n",
-    "        V[pai], V[i] = V[i], V[pai]  # troca\n",
-    "        heapify_up(V, pai)\n",
-    "\n",
-    "\n",
-    "def print_tree(V, i=0, p=0):\n",
-    "    esquerda = (i * 2) + 1\n",
-    "    direita = (i * 2) + 2\n",
-    "\n",
-    "    if p == 0:\n",
-    "        print(V[i])\n",
-    "    if esquerda < len(V):\n",
-    "        print(\" \" * p * 2, \"─\", V[esquerda])\n",
-    "        print_tree(V, esquerda, p + 1)\n",
-    "    if direita < len(V):\n",
-    "        print(\" \" * p * 2, \"─\", V[direita])\n",
-    "        print_tree(V, direita, p + 1)\n",
-    "\n",
-    "\n",
-    "def insert_heap(V, e):\n",
-    "    V.append(e)\n",
-    "    index = len(V) - 1\n",
-    "    \n",
-    "    heapify_up(V, index)\n",
-    "\n",
-    "\n",
-    "def remove_heap(V):\n",
-    "    maior = V[0]\n",
-    "    ultimo = V.pop() \n",
-    "\n",
-    "    if len(V) != 0:\n",
-    "        V[0] = ultimo\n",
-    "        heapify_down(V, 0)\n",
+    "    if len(heap) != 0:\n",
+    "        heap[0] = ultimo\n",
+    "        heapify_down(heap, 0)\n",
     "\n",
     "    return maior\n",
     "\n",
@@ -123,12 +91,16 @@
     "def heap_sort(V):\n",
     "    make_max_heap(V)\n",
     "\n",
-    "    v_ordenado = []\n",
+    "    h = []\n",
     "    for _ in range(len(V)):\n",
-    "        maior = remove_heap(V)\n",
-    "        v_ordenado.append(maior)\n",
+    "        maior = heap_pop(V)\n",
+    "        h.append(maior)\n",
     "        \n",
-    "    return v_ordenado"
+    "    return h[::-1]\n",
+    "\n",
+    "np.random.seed(123)\n",
+    "v = np.random.randint(1000, size=10**6).tolist()\n",
+    "v = heap_sort(v)"
    ]
   },
   {
@@ -140,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +181,7 @@
       "\n",
       "To find out why, try turning on parallel diagnostics, see https://numba.readthedocs.io/en/stable/user/parallel.html#diagnostics for help.\n",
       "\n",
-      "File \"../../../../../tmp/ipykernel_25566/2551992220.py\", line 1:\n",
+      "File \"../../../../../tmp/ipykernel_21378/2551992220.py\", line 1:\n",
       "<source missing, REPL/exec in use?>\n",
       "\n",
       "  warnings.warn(errors.NumbaPerformanceWarning(msg,\n"
@@ -219,7 +191,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.13592352867126464\n"
+      "0.12950011491775512\n"
      ]
     }
    ],
