--- a/performance.ipynb
+++ b/performance.ipynb
@@ -2,23 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import itertools\n",
     "from sys import maxsize\n",
     "import numpy as np\n",
-    "import numpy.ma as ma\n",
     "import matplotlib.pyplot as plt\n",
     "import perfplot\n",
-    "from numba import jit, int64, types, typed, typeof, none, float32\n",
     "import numba as nb\n",
     "from numba.experimental import jitclass\n",
     "from math import floor, sqrt, ceil\n",
-    "from time import time\n",
-    "from collections import namedtuple\n",
-    "np.random.seed(124)  # Seed the random number generator"
+    "from time import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@jitclass([(\"V\", nb.int64[:]), (\"size\", nb.int64)])\n",
+    "class Parte(object):\n",
+    "    def __init__(self, V, size):\n",
+    "        self.V = V\n",
+    "        self.size = size\n",
+    "\n",
+    "    def __setitem__(self, index, new_value):\n",
+    "        self.V[index] = new_value\n",
+    "\n",
+    "    def __getitem__(self, index):\n",
+    "        return self.V[index]\n",
+    "\n",
+    "    def pop(self):\n",
+    "        self.size -= 1\n",
+    "        return self.V[self.size]"
    ]
   },
   {
@@ -30,34 +48,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def insertion_sort(A):\n",
-    "    for j in range(1, len(A)):\n",
-    "        key = A[j]\n",
+    "@nb.jit\n",
+    "def insertion_sort(parte: Parte):\n",
+    "    for j in range(1, parte.size):\n",
+    "        key = parte.V[j]\n",
     "        i = j - 1\n",
-    "        while (i >= 0) & (A[i] > key):\n",
-    "            A[i + 1] = A[i]\n",
-    "            i = i - 1\n",
-    "        A[i + 1] = key   \n",
-    "        \n",
-    "# def bubble_sort(V):\n",
-    "#     # Já que vamos comparar v[i] com v[i+1], no pior caso,\n",
-    "#     for iteração in range(len(V) - 1):\n",
-    "#         ocorreu_troca = False\n",
-    "\n",
-    "#         for i in range((len(V) - 1) - iteração):\n",
-    "#             if V[i] > V[i + 1]:  # Troca os items\n",
-    "#                 V[i], V[i+ 1] = V[i+1], V[i]\n",
-    "#                 ocorreu_troca = True\n",
-    "\n",
-    "#         if not ocorreu_troca:\n",
-    "#             # Se não ocorreu troca, quer dizer que ele já estava ordenado\n",
-    "#             break\n",
-    "#     return V\n",
-    "\n"
+    "        while (i >= 0) and (parte.V[i] > key):\n",
+    "            parte.V[i + 1] = parte.V[i]\n",
+    "            i -= 1\n",
+    "            parte.V[i + 1] = key\n",
+    "    return parte"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Heap"
    ]
   },
   {
@@ -69,113 +80,195 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "2.852\n",
+      "\n",
+      "Mean: 2.852\n"
+     ]
+    }
+   ],
    "source": [
-    "VAGO = -maxsize\n",
+    "# VAZIO = -maxsize\n",
+    "VAZIO = -1\n",
     "\n",
     "\n",
-    "@jitclass([(\"V\", int64[:]), (\"size\", int64)])\n",
-    "class Parte(object):\n",
-    "    def __init__(self, V, size):\n",
-    "        self.V = V\n",
-    "        self.size = size\n",
+    "@nb.njit\n",
+    "def make_max_heap(V: np.ndarray):\n",
+    "    \"\"\"Transforma o array em um max-heap\"\"\"\n",
+    "    for i in range(V.size // 2, -1, -1):\n",
+    "        heapify_down(V, i)\n",
     "\n",
     "\n",
-    "@jit(nopython=True)\n",
-    "def bubble_sort(parte: Parte):\n",
-    "    if parte.size > 1:\n",
-    "        for i in range(parte.size - 1):\n",
-    "            if parte.V[i] > parte.V[i + 1]:  # Troca os items\n",
-    "                parte.V[i], parte.V[i + 1] = parte.V[i + 1], parte.V[i]\n",
+    "@nb.njit\n",
+    "def heapify_down(heap, i):\n",
+    "    # Mapeia o heap para uma binary tree\n",
+    "    maior = i\n",
+    "    filho_esq = (i * 2) + 1\n",
+    "    filho_dir = (i * 2) + 2\n",
     "\n",
+    "    if (filho_esq < heap.size) and heap[filho_esq] > heap[maior]:\n",
+    "        maior = filho_esq\n",
     "\n",
-    "@jit(nopython=True)\n",
-    "def particionar_array(array, qnt_partes, max_len_parte):\n",
-    "    n = len(array)\n",
+    "    if (filho_dir < heap.size) and (heap[filho_dir] > heap[maior]):\n",
+    "        maior = filho_dir\n",
+    "\n",
+    "    if maior != i:\n",
+    "        heap[i], heap[maior] = heap[maior], heap[i]  # troca\n",
+    "        heapify_down(heap, maior)\n",
+    "\n",
+    "@nb.njit\n",
+    "def heapify_up(V, i):\n",
+    "    pai = (i - 1) // 2\n",
+    "\n",
+    "    if (pai >= 0) and (V[i] > V[pai]):\n",
+    "        V[pai], V[i] = V[i], V[pai]  # troca\n",
+    "        heapify_up(V, pai)\n",
+    "\n",
+    "@nb.njit\n",
+    "def heap_insert(heap:np.ndarray, e):\n",
+    "    heap[-1] = e\n",
+    "    \n",
+    "    heapify_up(heap, heap.size - 1)\n",
+    "\n",
+    "@nb.njit\n",
+    "def heap_pop(heap: Parte) -> int:\n",
+    "    maior = heap[0]\n",
+    "    ultimo = heap.pop()\n",
+    "\n",
+    "    if heap.size != 0:\n",
+    "        heap[0] = ultimo\n",
+    "        heapify_down(heap, 0)\n",
+    "\n",
+    "    return maior\n",
+    "\n",
+    "@nb.njit\n",
+    "def heap_sort(parte: Parte):\n",
+    "    make_max_heap(parte.V)\n",
+    "    size = parte.size\n",
+    "\n",
+    "    for i in range(size):\n",
+    "        maior = heap_pop(parte)\n",
+    "        parte[size - 1 - i] = maior\n",
+    "\n",
+    "    parte.size = size\n",
+    "\n",
+    "    return parte\n",
+    "\n",
+    "@nb.njit\n",
+    "def particiona_array(array):\n",
+    "    n = array.size\n",
+    "\n",
+    "    max_len_parte = floor(sqrt(n))\n",
+    "    n_partes = ceil(n / max_len_parte)\n",
+    "    resto = n % max_len_parte\n",
     "\n",
     "    partes = []\n",
+    "    for i in range(n_partes):\n",
+    "        start = i * max_len_parte\n",
+    "        nxt = (i + 1) * max_len_parte\n",
     "\n",
-    "    for i in range(qnt_partes):\n",
-    "        if i != qnt_partes - 1:\n",
-    "            p = Parte(array[i * max_len_parte : (i + 1) * max_len_parte], max_len_parte)\n",
+    "        if (i != n_partes - 1) or (resto == 0):\n",
+    "            p = Parte(array[start:nxt], max_len_parte)\n",
     "        else:\n",
-    "            p = Parte(array[i * max_len_parte : n], n - (i * max_len_parte))\n",
+    "            filler = [VAZIO] * (max_len_parte - resto)\n",
+    "            final_array = np.append(array[start:n], filler)\n",
+    "\n",
+    "            p = Parte(final_array, resto)\n",
     "\n",
     "        partes.append(p)\n",
     "\n",
     "    return partes\n",
     "\n",
+    "@nb.njit\n",
+    "def sqrt_sort_quadratico(V: np.ndarray):\n",
+    "    n = V.size\n",
     "\n",
-    "@jit(nopython=True)\n",
-    "def info_max_value(arr):\n",
-    "    max_value = -np.Infinity\n",
-    "    max_index_parte = 0\n",
+    "    partes = [insertion_sort(parte) for parte in particiona_array(V)]\n",
     "\n",
-    "    for i, v in enumerate(arr):\n",
-    "        if (v != None) and (v > max_value):\n",
-    "            max_value = v\n",
-    "            max_index_parte = i\n",
-    "\n",
-    "    return max_index_parte, max_value\n",
-    "\n",
-    "\n",
-    "@jit(nopython=True)\n",
-    "def sqrtsort(V):\n",
-    "    n = len(V)\n",
-    "\n",
-    "    n_parte = floor(sqrt(n))\n",
-    "    n_partes = ceil(n / n_parte)\n",
-    "\n",
-    "    partes = particionar_array(V, n_partes, n_parte)\n",
-    "\n",
-    "    # aux_maiores = [None for _ in range(n_partes)]  # None == espaço vago\n",
-    "    aux_maiores = np.full(n_partes, VAGO)\n",
-    "\n",
-    "    solucao = np.zeros(n, dtype=int64)\n",
+    "    solucao = np.zeros(n, dtype=np.int64)\n",
+    "    aux_max_list = np.full(len(partes), VAZIO)\n",
     "\n",
     "    for iteracao in range(n):\n",
-    "        # Preenche o vetor aux_maiores com os maiores valores de cada parte disponível\n",
+    "        # Preenche o vetor aux_max_list com os maiores valores de cada parte disponível\n",
     "        for i, parte in enumerate(partes):\n",
+    "            if (aux_max_list[i] == VAZIO) and (parte.size > 0):\n",
+    "                aux_max_list[i] = parte[parte.size - 1]\n",
     "\n",
-    "            # se está disponível e ainda existem elementos não ordenados\n",
-    "            if (aux_maiores[i] == VAGO) and (parte.size > 0):\n",
-    "                bubble_sort(parte)\n",
-    "                aux_maiores[i] = parte.V[parte.size - 1]\n",
+    "        # Pega o index do maior elemento de \"aux_max_list\"\n",
+    "        max_index = np.argmax(aux_max_list)\n",
     "\n",
-    "        # Pega o index e o valor do maior elemento de aux_maiores\n",
-    "        max_index, max_value = info_max_value(aux_maiores)\n",
+    "        solucao[iteracao] = aux_max_list[max_index]\n",
     "\n",
-    "        solucao[iteracao] = max_value\n",
+    "        aux_max_list[max_index] = VAZIO  # indica q a vaga está disponível de novo\n",
     "\n",
-    "        # Remove o maior elemento da parte correspondente\n",
-    "        parte = partes[max_index]\n",
+    "        partes[max_index].size -= 1  # remove o elemento da parte\n",
     "\n",
-    "        if parte.size > 0:\n",
-    "            parte.size -= 1\n",
+    "    return solucao[::-1]\n",
     "\n",
-    "        aux_maiores[max_index] = VAGO  # indica q a vaga está disponível\n",
+    "@nb.njit\n",
+    "def sqrt_sort_heap(V: np.ndarray):\n",
+    "    n = V.size\n",
+    "\n",
+    "    partes = [heap_sort(parte) for parte in particiona_array(V)]\n",
+    "\n",
+    "    solucao = np.zeros(n, dtype=np.int64)\n",
+    "    aux_max_list = np.full(len(partes), VAZIO)\n",
+    "\n",
+    "    for iteracao in range(n):\n",
+    "        # Preenche o vetor aux_max_list com os maiores valores de cada parte disponível\n",
+    "        for i, parte in enumerate(partes):\n",
+    "            if (aux_max_list[i] == VAZIO) and (parte.size > 0):\n",
+    "                aux_max_list[i] = parte[parte.size - 1]\n",
+    "\n",
+    "        # Pega o index do maior elemento de \"aux_max_list\"\n",
+    "        max_index = np.argmax(aux_max_list)\n",
+    "\n",
+    "        solucao[iteracao] = aux_max_list[max_index]\n",
+    "\n",
+    "        aux_max_list[max_index] = VAZIO  # indica q a vaga está disponível de novo\n",
+    "\n",
+    "        partes[max_index].size -= 1  # remove o elemento da parte\n",
     "\n",
     "    return solucao[::-1]\n",
     "\n",
     "\n",
     "runtimes = []\n",
-    "# sizes = np.linspace(10**2, 10**7, num=30, dtype=int)\n",
     "# for size in sizes:\n",
     "for _ in range(1):\n",
-    "    start = time()\n",
-    "    # array = np.random.randint(1000, size=size, dtype=np.int64)\n",
-    "    array = np.random.randint(1000, size=10**7, dtype=np.int64)\n",
+    "    np.random.seed(124)  # Seed the random number generator\n",
+    "    array = np.random.randint(1000, size=10**1)\n",
     "\n",
-    "    res = sqrtsort(array)\n",
+    "    start = time()\n",
+    "\n",
+    "    # res = sqrt_sort_quadratico(array)\n",
+    "    res = sqrt_sort_heap(array)\n",
+    "    # print(res)\n",
+    "    print(np.array_equal(sorted(array), res))\n",
     "\n",
     "    total = time() - start\n",
     "    runtimes.append(total)\n",
-    "    print(\"{:.3f}\".format(total), end=\"\\r\")\n",
+    "\n",
+    "    print(\"{:.3f}\".format(total))\n",
+    "\n",
+    "print(\"\\nMean:\", round(np.mean(runtimes), 3))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# plt.loglog(sizes, runtimes, label=\"Tempo\")\n",
-    "# plt.show()\n"
+    "# plt.show()"
    ]
   }
  ],
